# sunset-predictor

./: README.md  package-lock.json  package.json  pyproject.toml  server.js
public/: index.html  script.js  styles.css
src/: crew.py  data.js  main.py
src/config/: agents.yaml  tasks.yaml
