[tool.poetry]
name = "sunset_predictor_agent"
version = "0.0.1"
description = "This is the start of your AgentStack project."
authors = ["Name <Email>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentstack = {extras = ["crewai"], version="0.2.2.2"}
firecrawl-py = "^1.6.8"

[project.scripts]
sunset_predictor_agent = "sunset_predictor_agent.main:run"
run_crew = "sunset_predictor_agent.main:run"
train = "sunset_predictor_agent.main:train"
replay = "sunset_predictor_agent.main:replay"
test = "sunset_predictor_agent.main:test"